[FIX] ensure toolbar bottom arrow visibility

--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@
     top: var(--arrow-top-pos);
     border: transparent 10px solid;
     border-top: #222222 10px solid;
-    z-index: -1;
+    z-index: 0;
 }
 .oe-toolbar .button-group {
     display: inline-block;
